@@ -266,7 +266,8 @@ public:
 
     void detach();
     void makeRangeVisible(const PlainTextRange&);
-    void press();
+    bool press() const;
+    bool performDefaultAction() const { return press(); }
     void childrenChanged();
 
     VisiblePositionRange visiblePositionRange() const;
